# fv1_programmer

./: .gitmodules  LICENSE  README.md  build_exe.bat  main.py  pyproject.toml  version.rc
.github/workflows/: release.yaml
adaptor/: adapter.py  mcp2221.py
eeprom/: eeprom.py
fv1_programmer/: dialogs.css  dialogs.py  fv1.py  main.py  pyinstaller.py  tui.css  tui.py
tests/: delays.hex  reverbs.hex  test_eeprom_read_write.py
